@@ -1,0 +1,12 @@
+[Test_item_server_factory]
+type=exe
+repo_id=IDL:Bonobo/GenericFactory:1.0 IDL:GNOME/GenericFactory:1.0
+description=Test object canvas item server factory
+location_info=sample-canvas-item
+
+[Test_item_server_bonobo_object]
+type=factory
+repo_id=IDL:Bonobo/Unknown:1.0 
+description=Test server canvas item component
+location_info=Test_item_server_factory
+
