@@ -1,0 +1,20 @@
+<oaf_info>
+
+<oaf_server iid="OAFIID:test_canvas_item_factory:db20642e-25a0-46d0-bbe0-84b79ab64e05" type="exe" location="./sample-canvas-item">
+<oaf_attribute name="repo_ids" type="stringv">
+<item value="IDL:GNOME/GenericFactory:1.0"/>
+</oaf_attribute>
+<oaf_attribute name="name" type="string" value="Test canvas item factory"/>
+<oaf_attribute name="description" type="string" value="Test object canvas item server factory"/>
+</oaf_server>
+
+<oaf_server iid="OAFIID:test_canvas_item:82a8a7cc-8b08-401b-9501-4debf6c96619" type="factory" location="OAFIID:test_canvas_item_factory:db20642e-25a0-46d0-bbe0-84b79ab64e05">
+<oaf_attribute name="repo_ids" type="stringv">
+<item value="IDL:Bonobo/Unknown:1.0"/>
+<item value="IDL:Bonobo/Embeddable:1.0"/>
+</oaf_attribute>
+<oaf_attribute name="name" type="string" value="Test canvas item"/>
+<oaf_attribute name="description" type="string" value="Test server canvas item component"/>
+</oaf_server>
+
+</oaf_info>
